<resources>
    <string name="app_name">StudBud</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_stundenplan">Schedule</string>
    <string name="title_activity_notenrechner">Marks Calculator</string>
    <string name="title_activity_profil">Profile</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_add_profile">AddProfile</string>
    <string name="title_activity_inf_wiss_marks">InfWissMarksActivity</string>
    <string name="title_activity_medien_info_marks">MedienInfoMarksActivity</string>
    <string name="title_activity_bachelor_mark">BachelorMarkActivity</string>


    <string name="title_schedule_button">ToDo Liste</string>
    <string name="title_calculator_button">Calculator</string>
    <string name="title_profile_button">Profile</string>
    <string name="title_timetable_button">Timetable</string>

    <string name="clear_timetable">Clear Timetable</string>


    <string name="title_course_title">Course title</string>
    <string name="title_start_time">Start time</string>
    <string name="title_end_time">End time</string>
    <string name="title_add_course">Add</string>
    <string name="title_room">Room</string>
    <string name="title_day">Day</string>


    <string name="title_result">Your marks</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>


    <string name="profile_name">Name</string>
    <string name="profile_semester">Semester</string>
    <string name="profile_main_subject">Main Subject</string>
    <string name="profile_score">Score</string>

    <string name="inf01">INF-M01</string>
    <string name="inf02">INF-M02</string>
    <string name="inf03">INF-M03</string>
    <string name="inf04">INF-M04</string>
    <string name="inf05">INF-M05</string>
    <string name="inf06">INF-M06</string>
    <string name="inf07">INF-M07</string>


    <string name="mei01">MEI-M01</string>
    <string name="mei03">MEI-M03</string>
    <string name="mei04">MEI-M04</string>
    <string name="mei05">MEI-M05</string>
    <string name="mei08">MEI-M08</string>
    <string name="mei10">MEI-M10</string>

    <string name="bachelor_title">Bachelorarbeit</string>


    <!--

    Strings for the modules
    Informationswissenschaft

    -->


    <string name="inf1_1">Einführung in die Informationswissenschaft</string>
    <string name="inf1_2">Informationstechnische Grundlagen</string>

    <string name="inf2_1">Mathematische Grundlagen</string>
    <string name="inf2_2">Einführung in die Methoden empirischer Forschung</string>
    <string name="inf2_3">Einführung in die Informationslinguistik</string>

    <string name="inf3_1">Programmiersrpache 1</string>
    <string name="inf3_2">Programmiersprache 2</string>
    <string name="inf3_3">Algorithmen und Datenstrukturen</string>
    <string name="inf3_4">Software Engineering-Entwurfsmethoden</string>

    <string name="inf4_1">Grundlagen des Information Retrieval</string>
    <string name="inf4_2">Inhaltserschließung / Auszeichnungssprachen</string>
    <string name="inf4_3">Vertiefungsseminar Information Retrieval</string>

    <string name="inf5_1">Grundlagen der Softwareergonomie</string>
    <string name="inf5_2">Vertiefungsseminar Softwareergonomie</string>

    <string name="inf6_1">Datenbanksysteme</string>
    <string name="inf6_2">Grundlagen: Informationssysteme</string>
    <string name="inf6_3">Vertiefungsseminar Informationssysteme</string>

    <string name="inf7_1">Einführung in das Projektmanagement</string>
    <string name="inf7_2">Projektseminar</string>


    <!--

    Strings for the modules
    Medieninformatik

    -->


    <string name="mei1_1">Einführung in die Informatik und Medieninformatik</string>
    <string name="mei1_2">Einführung in das wissenschftliche Arbeiten</string>

    <string name="mei3_1">Einführung in die objektorientierte Programmierung: JAVA</string>
    <string name="mei3_2">Algorithmen,Datenstrukturen und Programmierung</string>
    <string name="mei3_3">Einführung in die Anwendungsprogrammierung: Android</string>

    <string name="mei4_1">Multimedia Technology</string>
    <string name="mei4_2">Multimediale Informationssysteme und Datenbanken</string>
    <string name="mei4_3">Multimedia Engineering</string>

    <string name="mei5_1">Human Computer Interaction / Ersatzkurs</string>
    <string name="mei5_2">Usability Engineering</string>
    <string name="mei5_3">Projektseminar Mediengestaltung</string>

    <string name="mei8_1">Multimedia Technology</string>
    <string name="mei8_2">Multimediale Informationssystem und Datenbanken</string>

    <string name="mei10_1_inf">Kurs 1</string>
    <string name="mei10_2_inf">Projektseminar</string>

    <string name="mei10_1">Kurs 1</string>
    <string name="mei10_2">Kurs 2</string>
    <string name="mei10_3">Projektseminar</string>


    <string name="todo_text_date_hint">Set Date</string>
    <string name="add_item_hint">New Task</string>
    <string name="add_item_button_confirm">Add</string>
    <string name="add_item_header">Todo-List</string>


</resources>
