<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196f3"
        android:gravity="center"
        android:padding="10dp"
        android:paddingBottom="16dp"
        android:text="@string/add_item_header"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/todo_edit_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196f3"
        android:hint="@string/add_item_hint"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="sans-serif" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196f3"
        android:orientation="horizontal"
        android:padding="10dp">


        <EditText
            android:id="@+id/todo_edit_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:focusable="false"
            android:hint="@string/todo_text_date_hint"
            android:inputType="date"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:fontFamily="sans-serif"
            android:backgroundTint="#ffffff"/>

        <Button
            android:id="@+id/add_task_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/add_item_button_confirm"
            android:background="@drawable/rounded_button"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif"/>

    </LinearLayout>

    <ListView
        android:id="@+id/todo_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:padding="10dp"
        android:fontFamily="sans-serif"/>

</LinearLayout>
