<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.aldu.studbud.MainActivity"
    android:background="#000000"
    android:backgroundTint="#2196f3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Study Buddy"
        android:id="@+id/headLine"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="4%"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="30dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:background="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_profile_button"
        android:id="@+id/profile_button"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_button"
        app:layout_widthPercent ="100%"
        app:layout_heightPercent ="10%"
        android:fontFamily="sans-serif"
        app:layout_marginTopPercent="7%"
        android:layout_below="@+id/calculator_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_schedule_button"
        android:id="@+id/schedule_button"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_button"
        app:layout_widthPercent ="100%"
        app:layout_heightPercent ="10%"
        app:layout_marginTopPercent="15%"
        android:layout_below="@+id/headLine"
        android:fontFamily="sans-serif"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_timetable_button"
        android:id="@+id/timetable_button"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_button"
        app:layout_widthPercent = "100%"
        app:layout_heightPercent = "10%"
        android:fontFamily="sans-serif"
        app:layout_marginTopPercent = "7%"
        android:layout_below="@+id/profile_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_calculator_button"
        android:id="@+id/calculator_button"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_button"
        app:layout_widthPercent ="100%"
        app:layout_heightPercent ="10%"
        app:layout_marginTopPercent ="7%"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/schedule_button"
        android:layout_alignRight="@+id/headLine"
        android:layout_alignEnd="@+id/headLine" />

</android.support.percent.PercentRelativeLayout>
