<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.studbud.studbud.MedienInfoMarksActivity"
    tools:showIn="@layout/activity_medien_info_marks">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textAlignment="center"
        android:id="@+id/module_inf_01_header"
        android:text="@string/inf01"
        app:layout_widthPercent="70%"
        app:layout_heightPercent="10%"
        app:layout_marginTopPercent="3%"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/module_inf_01_mark"
        app:layout_widthPercent="25%"
        app:layout_heightPercent="10%"
        app:layout_marginTopPercent="3%"
        app:layout_marginLeftPercent="75%"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inf_1_1_title"
        android:text="@string/inf1_1"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_below="@+id/module_inf_01_header"
        app:layout_widthPercent="70%"
        app:layout_heightPercent="10%"
        app:layout_marginTopPercent="3%"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inf_1_2_title"
        android:text="@string/inf1_2"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_below="@+id/inf_1_1_title"
        app:layout_widthPercent="70%"
        app:layout_heightPercent="10%"
        app:layout_marginTopPercent="3%"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inf_1_1_mark"
        android:textSize="18sp"
        android:layout_below="@+id/module_inf_01_mark"
        app:layout_widthPercent="25%"
        app:layout_heightPercent="10%"
        app:layout_marginTopPercent="3%"
        app:layout_marginLeftPercent="75%"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inf_1_2_mark"
        android:textSize="18sp"
        android:layout_below="@+id/inf_1_1_mark"
        app:layout_widthPercent="25%"
        app:layout_heightPercent="10%"
        app:layout_marginTopPercent="3%"
        app:layout_marginLeftPercent="75%"/>

</android.support.percent.PercentRelativeLayout>
</ScrollView>