<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TimeTable.AddCourseToTimeTable"
    tools:showIn="@layout/activity_add_course_to_schedule"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_course_title"
        android:id="@+id/course_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#e5802c"
        app:layout_heightPercent = "8%"
        app:layout_widthPercent = "45%"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_text"
        android:layout_below="@+id/course_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#e5802c"
        android:backgroundTint="#e5802c"
        android:layout_alignEnd="@+id/course_title"
        android:singleLine="true"
        android:width="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/room"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#e5802c"
        android:text="@string/title_room"
        app:layout_heightPercent = "8%"
        android:layout_above="@+id/title_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/course_title"
        android:layout_toEndOf="@+id/course_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/room_text"
        android:backgroundTint="#e5802c"
        android:textColor="#e5802c"
        android:layout_alignTop="@+id/title_text"
        android:layout_alignRight="@+id/boundary"
        android:layout_alignEnd="@+id/room"
        android:layout_toRightOf="@+id/room"
        android:layout_toEndOf="@+id/boundary"
        android:singleLine="true"/>

    <View
        android:id="@+id/boundary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_course"
        android:id="@+id/add_course_button"
        android:textSize="25dp"
        android:background="#e5802c"
        android:layout_below="@+id/course_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        app:layout_marginTopPercent = "25%"
        />

</android.support.percent.PercentRelativeLayout>
