<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Profile"
    tools:showIn="@layout/activity_add_profile"
    android:backgroundTint="#e5802c"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:id="@+id/name_textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:layout_marginTopPercent ="8%"
        app:layout_heightPercent="10%"
        android:textAlignment="center"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:background="#71373535"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_textView"
        android:layout_alignEnd="@+id/name_textView"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:id="@+id/name_editText" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_semester"
        android:layout_below="@+id/name_editText"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        app:layout_marginTopPercent ="4%"
        app:layout_heightPercent="10%"
        app:layout_widthPercent ="75%"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/semester_textView"
        android:paddingTop="15dp"
        android:background="#71373535" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/semester_editText"
        android:layout_alignBottom="@+id/semester_textView"
        android:layout_toEndOf="@+id/semester_textView"
        app:layout_widthPercent="25%"
        android:singleLine="true"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_main_subject"
        android:layout_below="@+id/semester_textView"
        app:layout_marginTopPercent ="5%"
        app:layout_heightPercent="10%"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:paddingTop="15dp"
        android:background="#71373535"
        android:id="@+id/main_subject_textView" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/safe_button"
        app:layout_marginTopPercent ="5%"
        app:layout_widthPercent="30%"
        app:layout_heightPercent="13%"
        android:src="@drawable/save"
        android:background="#00ffffff"
        android:layout_below="@+id/main_subject_spinner"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_subject_spinner"
        android:layout_below="@+id/main_subject_textView"
        android:layout_centerHorizontal="true"
        android:spinnerMode="dialog" />


</android.support.percent.PercentRelativeLayout>
